--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "gulp-rename": "^2.0.0",
         "gulp-sass": "^4.1.0",
         "gulp-uglify": "^3.0.2",
+        "jquery": "^3.5.1",
         "magnific-popup": "^1.1.0",
         "normalize.css": "^8.0.1",
         "slick-carousel": "^1.8.1"
